<resources>
    <string name="app_name">In Class Assignments</string>
    <string name="calculate_bmi_button">Calculate BMI</string>
    <string name="text_view_bmi">Body Mass Index (BMI)</string>
    <string name="text_view_bmi_button_instructions">Click on Calculate BMI to find your BMI</string>
    <string name="text_view_weight">Weight</string>
    <string name="height">Height</string>
    <string name="text_box_weight">Your weight in pounds</string>
    <string name="weight_metric">lb</string>
    <string name="text_box_feet">feet</string>
    <string name="text_box_inches">inches</string>
    <string name="button_InClass01">InClass01</string>
    <string name="button_InClass02">InClass02</string>
    <string name="button_InClass03">InClass03</string>
    <string name="button_InClass04">InClass04</string>
    <string name="button_InClass05">InClass05</string>
    <string name="button_InClass07">InClass07</string>
    <string name="edit_text_person_name">Name</string>
    <string name="edit_text_person_email">Email</string>
    <string name="radio_group_title">I use:</string>
    <string name="radio_group_option1">Android</string>
    <string name="radio_group_option2">IOS</string>
    <string name="mood_indicator">Your current mood:</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="awesome">Awesome</string>
    <string name="submit_button">Submit</string>
    <string name="select_avatar">Select Your Avatar</string>
    <string name="name_result">Name:</string>
    <string name="email_result">Email:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_complexity">Select Complexity:</string>
    <string name="minimum">Minimum:</string>
    <string name="maximum">Maximum:</string>
    <string name="average">Average:</string>
    <string name="generate_number">Generate Number</string>
    <string name="image_search">Image Search</string>
    <string name="go_button">Go</string>
    <string name="enter_destination">destination</string>
    <string name="search_to_display_img">search something to display an image!</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="writeNote">write note</string>
    <string name="logout">logout</string>


</resources>