<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment" >

    <EditText
        android:id="@+id/edit_text_person_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_text_person_name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_person_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_person_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/edit_text_person_name2"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_person_name2" />

    <ImageView
        android:id="@+id/default_avatar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:rotationX="-2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_person_email2"
        app:srcCompat="@drawable/select_avatar" />

    <RadioGroup
        android:id="@+id/radio_group_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_avatar2">

        <TextView
            android:id="@+id/radio_group_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_group_title" />

        <RadioButton
            android:id="@+id/android_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_group_option1" />

        <RadioButton
            android:id="@+id/ios_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_group_option2" />
    </RadioGroup>

    <TextView
        android:id="@+id/mood_indicator2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mood_indicator"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="410dp" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="330dp"
        android:layout_height="67dp"
        android:max="4"
        android:progress="2"
        android:progressTint="#03A9F4"
        android:theme="@android:style/Widget.Material.SeekBar.Discrete"
        android:thumbTint="#03A9F4"
        android:tickMarkTint="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mood_indicator2" />

    <ImageView
        android:id="@+id/sad_Image2"
        android:layout_width="40dp"
        android:layout_height="62dp"
        app:layout_constraintStart_toEndOf="@+id/seekBar2"
        app:layout_constraintTop_toTopOf="@+id/seekBar2"
        app:srcCompat="@drawable/happy" />

    <Button
        android:id="@+id/submit_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9C9999"
        android:drawableTint="#A6A4A4"
        android:foregroundTint="#AAAAAA"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        android:textColor="#323030"
        android:textStyle="normal"
        app:iconTint="#989696"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

</androidx.constraintlayout.widget.ConstraintLayout>