<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InClass04">

    <TextView
        android:id="@+id/select_complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_complexity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/complexity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/select_complexity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/select_complexity"
        app:layout_constraintTop_toTopOf="@+id/select_complexity" />

    <SeekBar
        android:id="@+id/complexity_bar"
        android:layout_width="374dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:max="10"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_complexity" />

    <TextView
        android:id="@+id/minimum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/minimum"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/complexity_bar"
        app:layout_constraintTop_toBottomOf="@+id/complexity_bar" />

    <TextView
        android:id="@+id/maximum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/maximum"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/minimum"
        app:layout_constraintTop_toBottomOf="@+id/minimum" />

    <TextView
        android:id="@+id/average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/average"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/maximum"
        app:layout_constraintTop_toBottomOf="@+id/maximum" />

    <TextView
        android:id="@+id/min_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minimum"
        app:layout_constraintTop_toTopOf="@+id/minimum" />

    <TextView
        android:id="@+id/max_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minimum"
        app:layout_constraintTop_toTopOf="@+id/maximum" />

    <TextView
        android:id="@+id/avg_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toEndOf="@+id/average"
        app:layout_constraintTop_toTopOf="@+id/average" />

    <Button
        android:id="@+id/generate_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/generate_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/average" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="328dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:max="100"
        android:min="0"
        android:progress="0"
        android:progressBackgroundTint="#716D6C"
        android:progressTint="#2F8CBD"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_number"
        tools:visibility="invisible" />
</androidx.constraintlayout.widget.ConstraintLayout>