<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inClass05.InClass05">

    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#4475B1"
        android:ems="10"
        android:foregroundTint="#1822D3"
        android:hint="@string/enter_destination"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/goButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#274BCF"
        android:text="@string/go_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="245dp"
        android:layout_height="241dp"
        app:layout_constraintBottom_toBottomOf="@+id/placeImage"
        app:layout_constraintEnd_toEndOf="@+id/placeImage"
        app:layout_constraintStart_toStartOf="@+id/placeImage"
        app:layout_constraintTop_toTopOf="@+id/placeImage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_to_display_img"
        app:layout_constraintBottom_toBottomOf="@+id/placeImage"
        app:layout_constraintEnd_toEndOf="@+id/placeImage"
        app:layout_constraintStart_toStartOf="@+id/placeImage"
        app:layout_constraintTop_toTopOf="@+id/placeImage" />

    <ImageView
        android:id="@+id/placeImage"
        android:layout_width="371dp"
        android:layout_height="458dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/imageview_border"
        android:src="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:srcCompat="?attr/selectableItemBackground" />

    <ImageView
        android:id="@+id/scrollLeft"
        android:layout_width="91dp"
        android:layout_height="96dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeImage" />

    <ImageView
        android:id="@+id/scrollRight"
        android:layout_width="86dp"
        android:layout_height="97dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/placeImage" />
</androidx.constraintlayout.widget.ConstraintLayout>